--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "watchify src/main.jsx -v -t [ babelify --presets [ react ] ] -o public/js/main.js"
+    "start": "watchify src/main.jsx -v -t [ babelify --sourceMapsAbsolute --presets [ react ] ] -o public/js/main.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "babelify": "^7.3.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-router": "^2.6.0",
     "watchify": "^3.7.0"
   }
 }
