--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
-    "watchify": "^3.7.0"
+    "reflux": "^0.4.1",
+    "watchify": "^3.7.0",
+    "whatwg-fetch": "^1.0.0"
   }
 }
